package json update

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "material-design-icons-iconfont": "^5.0.1",
         "ncp": "^2.0.0",
         "resolve-url-loader": "^3.1.0",
-        "responsivevoice": "git://github.com/demartsc/responsivevoice.git",
+        "responsivevoice": "https://github.com/demartsc/responsivevoice/archive/refs/heads/master.tar.gz",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "shapefile": "^0.6.6",
@@ -39,7 +39,7 @@
         "@splidejs/vue-splide": "^0.3.5",
         "@types/core-js": "^2.5.3",
         "@vue/composition-api": "^1.6.2",
-        "amcharts3": "github:amcharts/amcharts3",
+        "amcharts3": "https://github.com/amcharts/amcharts3/archive/refs/heads/master.tar.gz",
         "ammap3": "^3.21.15",
         "bootstrap": "^5.2.0",
         "core-js": "^3.6.5",
